
      - OFS Image: Image and File updated to use isinstance(data, str)
        and raises TypeError upon encountering unicode objects.

      - OFS Application: Updated deprecation warnings.
        Support for '__ac_permissions__' and 'meta_types' will be removed in
        Zope 2.11, 'methods' support might remain longer.

    Features added

      - The ZPublisher HTTP request has now both the debug and locale
        attributes available, like its Zope 3 counterpart. The debug attribute
        was so far limited to code from the zope.* namespace in order to make
        the Zope 3 ZPT engine work. The locale attribute provides access to an
        zope.i18n.interfaces.locales.ILocale object with access to locale
        related information like date / time formatting or translated language
        and country names. Form variables of both debug and locale will shadow
        these two attributes and their use is therefor discouraged.

      - MailHost: now uses zope.sendmail for delivering the mail. With this change
        MailHost integrates with the Zope transaction system (avoids sending dupe
        emails in case of conflict errors). In addition MailHost now provides 
        support for asynchronous mail delivery. The 'Use queue' configuration 
        option will create a mail queue on the filesystem (under 
        'Queue directory') and start a queue thread that checks the queue every
        three seconds. This decouples the sending of mail from its delivery.
        In addition MailHosts now supports encrypted connections through TLS/SSL.

      - integrated ZODB 3.8
    
      - integrated Zope 3.4

      - Support for using zopectl on Windows has been added. All commands are
        supported and there are two Windows specific ones: install and remove,
        which install or remove the Windows service. The start, stop and
        restart commands handle the Windows service. In order to use them, you